# sandag_parking

./: .gitignore  .pylintrc  README.md  process.py  pyproject.toml  settings.yaml
data/: MGRA Parking Inventory.xlsx  mgra_parking_inventory.csv
notebooks/: Expected parking cost calcs.xlsx  create_choropleth_map-parking_costs.ipynb  parking_data_analysis.ipynb  parking_data_analysis_JF.ipynb
output/: aggregated_street_data.csv  district_data.csv  estimated_spaces.csv  expected_parking_costs.csv  imputed_parking_costs.csv  reduced_parking_costs.csv
output/plots/: 1_paid_zones.html  2_concave_hull.html  3_buffered_hull.html  4_parking_district.html
output/shapefiles/: buffered_hulls.dbf  buffered_hulls.shp  buffered_hulls.shx  clusters.dbf  clusters.shp  clusters.shx  districts.dbf  hulls.dbf  hulls.shp  hulls.shx
parking/: __main__.py  base.py  districts.py  estimate_spaces.py  expected_cost.py  imputation.py  process.py  reduction.py
